chapter13/NetworkPolicy/network-policy-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-netpolicy
spec:
  podSelector:
    matchLabels:
      app: webserver
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: database
